@@ -1,0 +1,61 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+"http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+	<head>
+		<title>
+			JavaScriptMVC
+		</title>
+		<link rel="stylesheet" type='text/css' href='documentjs/jmvcdoc/style.css'>
+		<link rel="shortcut icon" href="documentjs/jmvcdoc/images/favicon.ico">
+	</head>
+	<body>
+		<div id='documentation'>
+			<div id='top'>
+				<div class="content">
+					<div id="searchRoundCorners">
+						<input id='search' type='input' disabled='true'>
+					</div>
+					<div id='defaults'>
+						<ul id="menu" class="ui-menu">
+							<li class="ui-menu-item">
+								<a class="menuLink" href="#&amp;search=*&amp;who=index"><span class="menuSpan">Home</span></a>
+							</li>
+							<li class="ui-menu-item">
+								<a class="menuLink" href="#favorites"><span class="menuSpan">Favorites</span></a>
+							</li>
+							<li class="ui-menu-item">
+								<a class="menuLink" href="http://javascriptmvc.com/#&amp;who=follow" title="Follow"><span class="menuSpan red">Follow</span></a>
+							</li>
+							<li class="ui-menu-item">
+								<a class="menuLink" href="#&amp;who=contribute" title="Contribute"><span class="menuSpan red">Contribute</span></a>
+							</li>
+							<li class="ui-menu-item">
+								<a class="menuLink" href="#&amp;who=code" title="Code"><span class="menuSpan red">Code</span></a>
+							</li>
+						</ul>
+					</div>
+					<div class="logo-text">
+						<a href='http://javascriptmvc.com'><img src='documentjs/jmvcdoc/images/logo80x30.png' class="logo-image"></a>
+					</div>
+				</div>
+			</div>
+			<div id='bottom'>
+				<div id='nav'>
+					<a>Loading ...</a>
+				</div>
+				<div id='doc_container'>
+					<div id='doc'>
+						<%= this.indexPage ? this.indexPage.comment : "Add a page named 'index' to see something here." %>
+					</div>
+					<div id="disqus_thread"></div>
+				</div>
+			</div>
+		</div>
+		<div id='low'>
+			<a href="http://jupiterit.com">© Jupiter Consulting - JavaScriptMVC Training and Support</a>
+		</div><script type='text/javascript'>
+DOCS_LOCATION = "docs/" //adds searchData to this
+		</script><script type='text/javascript' src='steal/steal.production.js?documentjs/jmvcdoc'>
+</script>
+	</body>
+</html>
