@@ -3,6 +3,7 @@ Title: Changelog
 0.1.4:
 * Updated documentation engine to DocumentJS and build system to StealJS
 * Merged pull request #19 and #20, support to set up a validate options for validate() in "form" type
+* Added simple getting started example
 
 0.1.3:
 * Created some public <JSFiddles for trying the plugin at http://jsfiddle.net/user/Daff/fiddles>
